--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-* linguist-vendored
-*.js linguist-vendored=false
+* text=auto
+*.css linguist-vendored
+*.scss linguist-vendored
+CHANGELOG.md export-ignore
