--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "engailtonoliveira/stickynodes",
-  "short_name": "Sticky Nodes",
+  "name": "engailtonoliveira/stickyNotes",
+  "short_name": "Sticky Notes",
   "icons": [
     {
       "src": "/images/svg/home-page.svg",
